2236 [Log] renamed Haali Muxer to Haali Splitter and fixed a problem displaying the warning icon in Windows 7/8
2235 [AviSynth Script Creator] fixed "Suggest Resolution (mod16)" handling
                               added option to select 2/4/8 as mod values for "Suggest Resolution"
2234 [x264] lowered PS3 device level from 4.2 to 4.1 in order to enhance compatibility
2233 [QAAC] added an information that an update check is required when enabling QAAC for the first time 
2232 [HD Streams Extractor] + [OneClick] improved logging
2231 [QAAC] as external dependencies are required the encoder is disabled by default
            enable it in the MeGUI settings and make sure that CoreAudioToolbox.dll is available
2230 [HD Streams Extractor] improved error handling
2229 [OneClick] fixed a problem during Blu-ray processing when source has no subtitle/audio track
2228 [OneClick] fixed a problem starting OneClick after a new install
2227 [MP4 Muxer] changed muxer to use the ISO 639-2/T language codes
2226 [HD Streams Extractor] fixed handling of input files with a + in the file name
2225 [MP4 Muxer] added better language support & several Apple devices tunings especially for chapters
2224 [Audio] removed faac & introduced qaac + opus encoders
2223 replaced the ISO 639-2 bibliographic language codes for German/French with the terminology ones (ger->deu, fre->fra)
2222 [Log] if Haali is not correctly installed a warning instead of an error will be logged
2221 [Log] added .NET 4.5 detection
2220 [OneClick] improved output container validation
                added subtitle support to MP4, AVI and M2TS container
2219 [Log] added Windows 8 detection
2217 [Update] fixed a problem if the automatic update check is disabled and components are missing
2216 [AVS Script Creator] fixed handling of custom FFMS index file location
2215 [OneClick] always mux output file
2214 [MKVExtract] fixed handling of input file name which contains error or warning