@@ -1,3 +1,4 @@
+2237 [OneClick] fixed hidden progress window when using more than 1 worker
 2236 [Log] renamed Haali Muxer to Haali Splitter and fixed a problem displaying the warning icon in Windows 7/8
 2235 [AviSynth Script Creator] fixed "Suggest Resolution (mod16)" handling
                                added option to select 2/4/8 as mod values for "Suggest Resolution"
